allow to set how many stops to go for a day
